Update issue templates

--- a/.github/ISSUE_TEMPLATE/----dev-log-------2021-00-00-.md
+++ b/.github/ISSUE_TEMPLATE/----dev-log-------2021-00-00-.md
@@ -1,7 +1,7 @@
 ---
 name: "[✍️ Dev Log] 이름 / 2021-00-00 "
 about: Describe this issue template's purpose here.
-title: ''
+title: "[✍️ Dev Log] 이름 / 2021-00-00"
 labels: devlog
 assignees: ''
 
